@startuml order-context-er
!define ENTITY_COLOR #E0F2F7
!define VALUE_OBJECT_COLOR #F0F4C3
!define AGGREGATE_ROOT_COLOR #FFE4B5

title Order Context - Entity Relationship Diagram

package "Order Aggregate" <<Rectangle>> {
    
    entity "Order" as order <<Aggregate Root>> AGGREGATE_ROOT_COLOR {
        * orderId : OrderId <<PK>>
        --
        * customerId : CustomerId
        * orderDate : LocalDateTime
        * status : OrderStatus
        * totalAmount : Money
        * shippingAddress : Address
        * billingAddress : Address
        --
        + create()
        + submit()
        + confirm()
        + ship()
        + deliver()
        + cancel()
        + addItem()
        + removeItem()
    }
    
    entity "OrderItem" as orderItem <<Entity>> ENTITY_COLOR {
        * orderItemId : OrderItemId <<PK>>
        * orderId : OrderId <<FK>>
        --
        * productId : ProductId
        * productName : String
        * quantity : Integer
        * unitPrice : Money
        * subtotal : Money
        --
        + updateQuantity()
        + calculateSubtotal()
    }
    
    object "Money" as money <<Value Object>> VALUE_OBJECT_COLOR {
        * amount : BigDecimal
        * currency : Currency
        --
        + add(Money)
        + subtract(Money)
        + multiply(int)
    }
    
    object "Address" as address <<Value Object>> VALUE_OBJECT_COLOR {
        * street : String
        * city : String
        * state : String
        * postalCode : String
        * country : String
    }
    
    object "OrderId" as orderId <<Value Object>> VALUE_OBJECT_COLOR {
        * value : String
    }
    
    enum OrderStatus {
        CREATED
        PENDING
        CONFIRMED
        SHIPPED
        DELIVERED
        CANCELLED
    }
}

' Relationships
order ||--|{ orderItem : "contains"
order *-- money : "totalAmount"
order *-- address : "shippingAddress"
order *-- address : "billingAddress"
order *-- orderId
order -- OrderStatus
orderItem *-- money : "unitPrice, subtotal"

' Business Rules
note right of order
    **Business Rules:**
    - Order must have at least one item
    - Order total = sum of item subtotals
    - Cannot cancel after CONFIRMED
    - Items cannot be modified after CONFIRMED
end note

' Domain Events
note left of order
    **Domain Events:**
    - OrderCreatedEvent
    - OrderSubmittedEvent
    - OrderConfirmedEvent
    - OrderShippedEvent
    - OrderDeliveredEvent
    - OrderCancelledEvent
    - OrderItemAddedEvent
    - OrderItemRemovedEvent
end note

@enduml
